--- a/Plotly_n.ipynb
+++ b/Plotly_n.ipynb
@@ -11143,10 +11143,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f3c602fb010>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#import dash\n",
+    "from dash import Dash\n",
+    "from dash import dcc\n",
+    "from dash import html\n",
+    "\n",
+    "\n",
+    "app = Dash(__name__)\n",
+    "\n",
+    "\n",
+    "# Run this app with `python app.py` and\n",
+    "# visit http://127.0.0.1:8050/ in your web browser.\n",
+    "\n",
+    "\n",
+    "import plotly.express as px\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "# assume you have a \"long-form\" data frame\n",
+    "# see https://plotly.com/python/px-arguments/ for more options\n",
+    "df = pd.DataFrame({\n",
+    "\"Fruit\": [\"Apples\", \"Oranges\", \"Bananas\", \"Apples\", \"Oranges\", \"Bananas\"],\n",
+    "\"Amount\": [4, 1, 2, 2, 4, 5],\n",
+    "\"City\": [\"a\", \"b\", \"c\", \"d\", \"e\", \"f\"]\n",
+    "})\n",
+    "\n",
+    "\n",
+    "fig = px.bar(df, x=\"Fruit\",y=\"Amount\",barmode='group')\n",
+    "fig1=px.line(df,x=\"City\",y=\"Amount\")\n",
+    "\n",
+    "\n",
+    "app.layout = html.Div(children=[\n",
+    "html.H1(children='Hello Dash'),\n",
+    "\n",
+    "\n",
+    "html.Div(children='''\n",
+    "Dash: A web application framework for your data.\n",
+    "'''),\n",
+    "\n",
+    "\n",
+    "dcc.Graph(\n",
+    "id='example-graph',\n",
+    "figure=fig\n",
+    "),\n",
+    "\n",
+    "\n",
+    "dcc.Graph(\n",
+    "id='example-graph1',\n",
+    "figure=fig1\n",
+    ")\n",
+    "])\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    \n",
+    "    app.run_server(debug=True)"
+   ]
   }
  ],
  "metadata": {
